Hotfix: fixed alignment not proper

--- a/src/index.scss
+++ b/src/index.scss
@@ -648,6 +648,7 @@ code {
 
       .bet-100 {
         display: flex;
+        justify-content: center;
         width: 100%;
       }
 
